MathObjects.Plugin.Symmetric/Parser/PermutationParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Permutation.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class PermutationParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, INT=5, WS=6;
	public const int
		RULE_init = 0, RULE_cycle = 1, RULE_value = 2;
	public static readonly string[] ruleNames = {
		"init", "cycle", "value"
	};

	private static readonly string[] _LiteralNames = {
		null, "'+'", "'('", "','", "')'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, "INT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Permutation.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public PermutationParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class InitContext : ParserRuleContext {
		public InitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_init; } }
	 
		public InitContext() { }
		public virtual void CopyFrom(InitContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ComposeContext : InitContext {
		public ComposeContext(InitContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPermutationVisitor<TResult> typedVisitor = visitor as IPermutationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompose(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class InitCycleContext : InitContext {
		public CycleContext[] cycle() {
			return GetRuleContexts<CycleContext>();
		}
		public CycleContext cycle(int i) {
			return GetRuleContext<CycleContext>(i);
		}
		public InitCycleContext(InitContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPermutationVisitor<TResult> typedVisitor = visitor as IPermutationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInitCycle(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InitContext init() {
		InitContext _localctx = new InitContext(Context, State);
		EnterRule(_localctx, 0, RULE_init);
		int _la;
		try {
			State = 12;
			switch (TokenStream.La(1)) {
			case T__0:
				_localctx = new ComposeContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 6; Match(T__0);
				}
				break;
			case T__1:
				_localctx = new InitCycleContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 8;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				do {
					{
					{
					State = 7; cycle();
					}
					}
					State = 10;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				} while ( _la==T__1 );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CycleContext : ParserRuleContext {
		public ValueContext[] value() {
			return GetRuleContexts<ValueContext>();
		}
		public ValueContext value(int i) {
			return GetRuleContext<ValueContext>(i);
		}
		public CycleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cycle; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPermutationVisitor<TResult> typedVisitor = visitor as IPermutationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCycle(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CycleContext cycle() {
		CycleContext _localctx = new CycleContext(Context, State);
		EnterRule(_localctx, 2, RULE_cycle);
		int _la;
		try {
			State = 27;
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 14; Match(T__1);
				State = 15; value();
				State = 20;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==T__2) {
					{
					{
					State = 16; Match(T__2);
					State = 17; value();
					}
					}
					State = 22;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				State = 23; Match(T__3);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 25; Match(T__1);
				State = 26; Match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ValueContext : ParserRuleContext {
		public ITerminalNode INT() { return GetToken(PermutationParser.INT, 0); }
		public ValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_value; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IPermutationVisitor<TResult> typedVisitor = visitor as IPermutationVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ValueContext value() {
		ValueContext _localctx = new ValueContext(Context, State);
		EnterRule(_localctx, 4, RULE_value);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 29; Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN.ToCharArray());
}
